<resources>
    <string name="app_name">Registration App</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="pwd">PWD</string>
    <string name="signup">SignUP</string>
    <string name="already_have_an_account_signin_here">Already have an account?SignIn here</string>
    <string name="password">PASSWORD</string>
    <string name="not_registerd_click_here">Not registerd ?Click here</string>
    <string name="click">CLICK</string>
    <string name="register">REGISTER</string>
    <string name="not_registerd_click_on_this">Not Registerd?Click on this</string>
    <string name="insta">Insta</string>
    <string name="facebook">Facebook</string>
    <string name="browser">Browser</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="student_app">STUDENT APP</string>
    <string name="tools">TOOLS</string>
    <string name="syllabus">SYLLABUS</string>
    <string name="academic_section">Academic section</string>
    <string name="home_screen">HOME SCREEN</string>
    <string name="noticeboard">noticeboard</string>
    <string name="timetable">timetable</string>
    <string name="selectbranch">SelectBranch</string>
    <string name="typesemester">TypeSemester</string>
    <string name="select">select</string>
    <string name="syllabusss">Syllabus</string>
    <string name="application_development">Application Development</string>
    <string name="backpaper_form">Backpaper form</string>
    <string name="press">press</string>
    <string name="submit">submit</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="branch">Branch</string>
    <string name="sem">sem</string>
    <string name="redgno">REDGno</string>
</resources>
