<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Backform">

    <Button
        android:id="@+id/btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="148dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etID10"
        android:layout_width="289dp"
        android:layout_height="42dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/etID11"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etID11"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/redgno"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etID13"
        app:layout_constraintEnd_toStartOf="@+id/etID12" />

    <EditText
        android:id="@+id/etID12"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/sem"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etID13"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etID13"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/branch"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etID14"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etID14"
        android:layout_width="328dp"
        android:layout_height="51dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/subject"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn12"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:gravity="center"
        android:text="BACKPAPER FORM"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>