<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLight"
    tools:context=".WELCOMEActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        android:text="WELCOME"
        android:textColor="#0E0D0D"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBlack"
        android:text="@string/message"
        android:textColor="#FAF8F8"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="114dp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBlack"
        android:text="@string/phone"
        android:textColor="#F5F4F4"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="186dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBlack"
        android:text="@string/browser"
        android:textColor="#FFFDFD"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBlack"
        android:text="@string/noticeboard"
        android:textColor="#FDFCFC"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="359dp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:background="@color/colorBlack"
        android:text="@string/timetable"
        android:textColor="#FAF9F9" />

</LinearLayout>